Added Readme file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "build/start.js",
   "scripts": {
     "test": "none",
-    "start-dev": "nodemon --config \"./util/nodemon.json\"/"
+    "start-dev": "nodemon --config \"./util/nodemon.json\"/",
+    "build": "rm -rf ./build/ && tsc",
+    "start": "node build/start.js"
   },
   "author": "Tumul Richesh",
   "license": "ISC",
