--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,3 @@
 {
-    "db": "mongodb+srv://challengeUser:WUMglwNBaydH8Yvu@challenge-xzwqd.mongodb.ne/getir-case-study?retryWrites=true"
+    "db": "mongodb+srv://challengeUser:WUMglwNBaydH8Yvu@challenge-xzwqd.mongodb.net/getir-case-study?retryWrites=true"
 }
